@@ -1,40 +1,60 @@
 package com.sideteam.groupsaver.domain.notification.service;
 
+import com.sideteam.groupsaver.domain.club.domain.Club;
 import com.sideteam.groupsaver.domain.club.repository.ClubMemberRepository;
 import com.sideteam.groupsaver.domain.firebase.service.FcmTokenService;
+import com.sideteam.groupsaver.domain.join.repository.WantClubCategoryRepository;
 import com.sideteam.groupsaver.domain.member.domain.Member;
+import com.sideteam.groupsaver.domain.member.repository.MemberRepository;
 import com.sideteam.groupsaver.domain.notification.domain.Notification;
+import com.sideteam.groupsaver.domain.notification.domain.NotificationRemoteType;
 import com.sideteam.groupsaver.domain.notification.domain.NotificationType;
-import com.sideteam.groupsaver.domain.notification.domain.PushAlarmMessage;
 import com.sideteam.groupsaver.domain.notification.repository.NotificationRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @Service
+@Slf4j
+@Transactional
 @RequiredArgsConstructor
 public class NotificationService {
     private final NotificationRepository notificationRepository;
     private final ClubMemberRepository clubMemberRepository;
+    private final WantClubCategoryRepository wantClubCategoryRepository;
+    private final MemberRepository memberRepository;
     private final FcmTokenService fcmTokenService;
 
-    public void createMyClubNotification(String title, String body, String image, long remoteId, NotificationType type) {
-        List<Member> clubMembers = clubMemberRepository.findAllMembersByClubId(remoteId);
-        notificationRepository.saveAll(
-            clubMembers.stream().map(member -> {
-                Notification notification = Notification.of(title, body, image, remoteId, type, member);
-                member.addNotification(notification);
-                fcmTokenService.sendPushAlarm(member, choiceMyClubPushAlarmMessage(type));
-                return notification;
-            }).toList());
+    @Async("threadPoolTaskExecutor")
+    public void createNewSchedule(long clubId, long scheduleId, String image, Long creatorId) {
+        List<Member> clubMembers = clubMemberRepository.findAllMembersExceptCreatorByClubId(clubId, creatorId);
+        notificationRepository.saveAll(clubMembers.stream().map(clubMember ->
+            Notification.of(NotificationRemoteType.SCHEDULE.getMessage(), null, image, scheduleId, NotificationRemoteType.SCHEDULE, clubMember)
+        ).collect(Collectors.toList()));
+        clubMembers.forEach(member -> fcmTokenService.sendPushAlarm(member, NotificationRemoteType.SCHEDULE.getMessage()));
     }
 
-    private String choiceMyClubPushAlarmMessage(NotificationType type) {
-        if (type == NotificationType.CLUB_SCHEDULE) {
-            return PushAlarmMessage.CLUB_SCHEDULE.getMessage();
-        } else {
-            return PushAlarmMessage.CLUB_NEW_MEMBER.getMessage();
-        }
+    @Async("threadPoolTaskExecutor")
+    public void createNewMember(long clubId, long newMemberId, String image) {
+        List<Member> clubMembers = clubMemberRepository.findAllMembersExceptNewMemberByClubId(clubId, newMemberId);
+        notificationRepository.saveAll(clubMembers.stream().map(clubMember ->
+                Notification.of(NotificationRemoteType.NEW_MEMBER.getMessage(), null, image, clubId, NotificationRemoteType.NEW_MEMBER, clubMember)
+        ).collect(Collectors.toList()));
+        clubMembers.forEach(member -> fcmTokenService.sendPushAlarm(member, NotificationRemoteType.NEW_MEMBER.getMessage()));
+    }
+
+    @Async("threadPoolTaskExecutor")
+    public void createNewClub(Club club, Long creatorId) {
+        List<Member> members = wantClubCategoryRepository.findAllMembersExceptCreatorByMajor(club.getCategoryMajor(), creatorId);
+        notificationRepository.saveAll(members.stream().map(member ->
+                Notification.of(club.getName(), club.getDescription(), club.getMainImage(), club.getId(), NotificationRemoteType.NEW_CLUB, member)
+        ).collect(Collectors.toList()));
+        members.forEach(member -> fcmTokenService.sendPushAlarm(member, NotificationRemoteType.NEW_CLUB.getMessage()));
     }
 }
